--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>hoy_alquilo</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGwgZpKQs6k3R9efpc-BPkx8f0UekF0RI&libraries=places"></script>
   </head>
   <body>
     <noscript>
